# storage/api-docs/api-docs.json
@@ -171,13 +171,18 @@
                 "tags": [
                     "Dataset"
                 ],
-                "summary": "Datasets by user id",
+                "summary": "Datasets",
                 "operationId": "1178f4279941e320a5b201a4abae2f72",
                 "parameters": [
                     {
-                        "name": "user_id",
+                        "name": "moderatable_id",
                         "in": "query",
-                        "description": "User id"
+                        "description": "Moderatable id"
+                    },
+                    {
+                        "name": "moderatable_type",
+                        "in": "query",
+                        "description": "Moderatable type"
                     },
                     {
                         "name": "status",
@@ -648,17 +653,17 @@
                         "type": "integer",
                         "example": 1
                     },
-                    "user_id": {
-                        "title": "user_id",
-                        "description": "user_id",
+                    "moderatable_id": {
+                        "title": "moderatable_id",
+                        "description": "moderatable_id",
                         "type": "integer",
                         "example": 1
                     },
-                    "type": {
-                        "title": "type",
-                        "description": "type",
+                    "moderatable_type": {
+                        "title": "moderatable_type",
+                        "description": "one of ROLE_CREATOR, ROLE_APPLICANT, STARTUP",
                         "type": "string",
-                        "example": "CREATOR"
+                        "example": "ROLE_CREATOR"
                     },
                     "content": {
                         "title": "content",
@@ -670,7 +675,7 @@
                         "title": "status",
                         "description": "status",
                         "type": "string",
-                        "example": "PENDING"
+                        "example": "CREATED"
                     },
                     "comment": {
                         "title": "comment",
